# deepvqe-ggml

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  eval.py  export_ggml.py  flake.nix  pyproject.toml  test_blocks.py  test_ccm_learning.py  test_data.py  test_model.py  train.py
.direnv/: flake-profile-1-link
configs/: cloud.yaml  default.yaml  hf_overfit.yaml  hf_train.yaml  overfit.yaml
data/: dataset.py  synth.py
ggml/: CMakeLists.txt  bench.cpp  common.cpp  common.h  compare.py  deepvqe.cpp  deepvqe_api.cpp  deepvqe_api.h  deepvqe_graph.cpp  deepvqe_graph.h  deepvqe_model.cpp  deepvqe_model.h  eval_graph.cpp  example_purego_test.go  test_align.cpp  test_bottleneck.cpp  test_ccm.cpp  test_conv2d_minimal.cpp  test_decoder.cpp  test_encoder.cpp  test_fe.cpp  test_quantize.cpp  test_stft.cpp  test_streaming.cpp
notebooks/: explore_training.ipynb
scripts/: check_training.py  diagnose_decoder.py  docker-run.sh  download_dns5_minimal.sh  hf_overfit.sh  hf_overfit_all.py  hf_train.sh  hf_train_all.py  listen.py  report_training.py  test_erle.py  upload_dns5_full.sh  upload_dns5_to_hf.py  upload_model.sh
src/: align.py  blocks.py  config.py  losses.py  model.py  stft.py  viz.py
train/: Dockerfile  Dockerfile.onnx  Makefile  eval.py  export_ggml.py  pyproject.toml  test_blocks.py  test_ccm_learning.py  test_data.py  test_optimizer.py  train.py  utils.py
train/configs/: default.yaml  overfit.yaml
train/data/: dataset.py  synth.py
train/notebooks/: explore_training.ipynb
train/scripts/: check_training.py  compare.py  diagnose_decoder.py  docker-run.sh  download_dns5_hf.py  dump_val_audio.py  eval_ggml.py  eval_score.py  gen_stft_ref.py  listen.py  report_training.py  score_dnsmos.py  tb_utils.py  test_erle.py
train/src/: blocks.py  ccm.py  config.py  metrics.py  viz.py
